// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EntityPicker overrides > without them its markup is the Budget picker's (snapshot, open, fixture groups) 1`] = `
"<div class="relative">
<div class="fixed inset-0 z-30" aria-hidden="true">
</div>
<div role="dialog" aria-label="Choose Georgia, a municipality or a region" data-testid="entity-picker" class="absolute top-1 left-0 z-40 w-[430px] max-w-[92vw] border border-[var(--control)] bg-[var(--tile)]">
<div class="border-b border-[var(--hairline-soft)] p-3">
<input role="combobox" aria-expanded="true" aria-controls="_R_0_-listbox" aria-autocomplete="list" placeholder="Search — Georgia, municipality or region" aria-label="Search Georgia, municipalities or regions" class="h-[34px] w-full rounded-[3px] border border-[var(--control)] bg-[var(--paper)] px-2.5 text-[13px] text-[var(--ink)] outline-none" value=""/>
</div>
<div id="_R_0_-listbox" role="listbox" aria-label="Results for Georgia, municipalities and regions" class="max-h-[340px] overflow-y-auto">
<a id="_R_0_-country" role="option" aria-selected="false" tabindex="-1" data-testid="picker-country" class="grid w-full cursor-pointer grid-cols-[minmax(0,1fr)_auto] items-baseline gap-2.5 border-b border-b-[var(--hairline-soft)] border-l-2 bg-[var(--tint)] px-3 py-2 text-left transition-colors duration-100 hover:border-l-[var(--accent)] hover:text-[var(--accent)] border-l-transparent text-[var(--ink)]" href="/en/explorer/municipalities/georgia">
<span class="min-w-0 break-words text-[12px] font-semibold">Georgia</span>
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10px] text-[var(--muted)]">3.94 mln GEL · 64 municipal budgets</span>
</a>
<div>
<a id="_R_0_-region-region.adjara" role="option" aria-selected="false" tabindex="-1" data-testid="picker-region" class="grid w-full cursor-pointer grid-cols-[minmax(0,1fr)_auto] items-baseline gap-2.5 border-b border-b-[var(--hairline-soft)] border-l-2 bg-[var(--tint)] px-3 py-2 text-left transition-colors duration-100 hover:border-l-[var(--accent)] hover:text-[var(--accent)] border-l-transparent text-[var(--ink)]" href="/en/explorer/municipalities/region/adjara">
<span class="truncate text-[12px] font-semibold">Adjara</span>
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10px] text-[var(--muted)]">0.41 mln GEL · 1</span>
</a>
<a id="_R_0_-muni-06" role="option" aria-selected="false" aria-current="page" tabindex="-1" data-testid="picker-municipality" class="grid w-full cursor-pointer grid-cols-[minmax(0,1fr)_auto] items-baseline gap-2.5 border-b border-b-[var(--row-border)] border-l-2 py-[7px] pr-3 pl-[26px] text-left transition-colors duration-100 hover:border-l-[var(--accent)] hover:bg-[var(--tint)] hover:text-[var(--accent)] border-l-transparent font-semibold text-[var(--accent)]" href="/en/explorer/municipalities/batumi">
<span class="truncate text-[13px]">Batumi</span>
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10.5px] text-[var(--faint)]">0.25 mln GEL</span>
</a>
</div>
</div>
<div class="border-t border-[var(--hairline-soft)] px-3 py-2 text-[11px] text-[var(--faint)]">Choose Georgia or a region to see its combined totals</div>
</div>
</div>"
`;

exports[`MunicipalitiesIndex overrides > without them its markup is the Budget index's (snapshot, fixture rows, empty map) 1`] = `
"<div data-testid="municipal-index-workspace" class="grid items-start gap-10 @min-[1100px]:grid-cols-[minmax(0,1fr)_336px]">
<div class="min-w-0">
<div>
<div data-testid="municipality-map">
<div class="relative">
<svg viewBox="0 0 100 60" role="group" aria-label="Municipal budgets per resident in Georgia, 2025" class="block h-auto w-full">
<defs>
<pattern id="municipality-map-no-data-hatch" patternUnits="userSpaceOnUse" width="7" height="7" patternTransform="rotate(35)">
<rect width="7" height="7" fill="#E5DBC9">
</rect>
<path d="M 0 0 V 7" stroke="#C4B69C" stroke-width="1.2">
</path>
</pattern>
</defs>
</svg>
</div>
<div aria-live="polite">
</div>
<div data-testid="municipality-map-legend" class="mt-2 flex flex-wrap items-center gap-x-3.5 gap-y-1.5 border-t border-[var(--hairline-soft)] pt-2.5">
<span data-testid="municipality-map-legend-scale" class="flex min-w-0 items-center gap-3.5">
<span class="font-[family-name:var(--font-numeric)] text-[11px] whitespace-nowrap text-[var(--faint)] min-[768px]:text-[10px]">min</span>
<span class="flex min-w-12 flex-[0_1_192px]">
<span aria-hidden="true" class="h-[9px] flex-1" style="background-color:#F3EBDB">
</span>
<span aria-hidden="true" class="h-[9px] flex-1" style="background-color:#E9D6C6">
</span>
<span aria-hidden="true" class="h-[9px] flex-1" style="background-color:#DEBBA6">
</span>
<span aria-hidden="true" class="h-[9px] flex-1" style="background-color:#D19A80">
</span>
<span aria-hidden="true" class="h-[9px] flex-1" style="background-color:#C4735A">
</span>
<span aria-hidden="true" class="h-[9px] flex-1" style="background-color:#B3402A">
</span>
</span>
<span class="font-[family-name:var(--font-numeric)] text-[11px] whitespace-nowrap text-[var(--faint)] min-[768px]:text-[10px]">max</span>
</span>
<span class="text-[11px] text-[var(--faint)] min-[768px]:text-[10px]">per resident</span>
<span class="inline-flex items-center gap-1.5">
<span aria-hidden="true" class="h-2.5 w-2.5 rounded-full border border-[var(--tile)] bg-[var(--positive)]">
</span>
<span class="text-[11px] text-[var(--faint)]">Self-governing cities</span>
</span>
</div>
</div>
</div>
<div class="mt-8 border-t-2 border-[var(--ink)] pt-5">
<h2 class="mb-[18px] font-[family-name:var(--font-display)] text-[22px] font-semibold">Key indicators</h2>
<div data-testid="index-kpi-grid" class="grid grid-cols-2 gap-8 @min-[1100px]:grid-cols-4">
<div data-testid="index-kpi" class="flex flex-col gap-[5px]">
<span class="text-[11px] font-semibold uppercase tracking-[0.07em] text-[var(--muted)]">Total</span>
<span class="font-[family-name:var(--font-display)] text-[30px] font-semibold leading-[1.1] tracking-[-0.02em] whitespace-nowrap">3.9 bn</span>
<span class="text-[11.5px] leading-snug text-[var(--muted)]">2025 · 64 municipal budgets</span>
</div>
<div data-testid="index-kpi" class="flex flex-col gap-[5px]">
<span class="text-[11px] font-semibold uppercase tracking-[0.07em] text-[var(--muted)]">Largest</span>
<span class="font-[family-name:var(--font-display)] text-[30px] font-semibold leading-[1.1] tracking-[-0.02em] whitespace-nowrap">Tbilisi</span>
<span class="text-[11.5px] leading-snug text-[var(--muted)]">35% of the total</span>
</div>
</div>
</div>
</div>
<div class="min-w-0 border-t-2 border-[var(--ink)] pt-[22px] @min-[1100px]:border-t-0 @min-[1100px]:border-l @min-[1100px]:border-[var(--hairline)] @min-[1100px]:pt-0 @min-[1100px]:pl-[26px]">
<div class="flex items-baseline justify-between gap-2.5 border-b-2 border-[var(--ink)] pb-2">
<span class="flex min-w-0 flex-wrap items-baseline gap-x-3.5">
<button type="button" data-testid="level-muni" aria-pressed="true" class="-mx-0.5 -my-1.5 cursor-pointer px-0.5 py-1.5 text-[0.78125rem] transition-colors duration-150 font-semibold text-[var(--ink)] underline decoration-[var(--accent)] decoration-2 underline-offset-4">Municipalities</button>
<span aria-hidden="true" class="h-[13px] w-px bg-[var(--control)]">
</span>
<button type="button" data-testid="level-region" aria-pressed="false" class="-mx-0.5 -my-1.5 cursor-pointer px-0.5 py-1.5 text-[0.78125rem] transition-colors duration-150 font-medium text-[var(--muted)] hover:text-[var(--ink)]">Regions</button>
</span>
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10.5px] text-[var(--faint)]">GEL</span>
</div>
<div class="flex items-center gap-2 pt-3 pb-1">
<input data-testid="municipal-search" type="search" enterKeyHint="search" placeholder="Search" aria-label="Search" class="h-[34px] min-w-0 flex-1 scroll-mt-3 appearance-none rounded-none border-0 border-b border-[var(--control)] bg-transparent px-0.5 text-[13px] text-[var(--ink)] outline-none placeholder:text-[var(--muted)] focus:border-[var(--ink)]" value=""/>
<span data-testid="row-count" class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10.5px] whitespace-nowrap text-[var(--faint)]">2</span>
</div>
<div data-testid="municipal-list-muni" class="mt-1.5 @min-[768px]:max-h-[620px] @min-[768px]:overflow-y-auto">
<a data-testid="municipal-list-row" data-municipality-row-code="04" class="grid w-full grid-cols-[22px_minmax(0,1fr)_122px_12px] items-center gap-[9px] border-b border-[var(--row-border)] py-[7px] pr-1 text-left transition-colors duration-100 hover:bg-[var(--tint)] bg-transparent" href="/en/explorer/municipalities/tbilisi">
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10.5px] text-[var(--faint)]">01</span>
<span class="min-w-0">
<span data-testid="municipal-row-name" class="block truncate text-[12.5px] font-medium">Tbilisi</span>
<span class="block text-[11px] min-[768px]:truncate min-[768px]:text-[10.5px] text-[var(--faint)]">Tbilisi</span>
<span class="mt-[5px] block h-[3px] bg-[var(--hairline-soft)]">
<span data-testid="municipal-row-bar" class="block h-[3px] bg-[var(--accent)]" style="width:100.0%">
</span>
</span>
</span>
<span class="min-w-0 text-right font-[family-name:var(--font-numeric)]">
<span data-testid="municipal-row-primary-amount" class="block text-[11.5px]">1.37 mln GEL</span>
<span data-testid="municipal-row-per-resident" class="mt-0.5 block text-[11px] min-[768px]:text-[10px] leading-[1.25] text-[var(--muted)]">1,141 per resident</span>
</span>
<span aria-hidden="true" class="font-[family-name:var(--font-numeric)] text-[11px] text-[var(--faint)]">→</span>
</a>
<a data-testid="municipal-list-row" data-municipality-row-code="06" class="grid w-full grid-cols-[22px_minmax(0,1fr)_122px_12px] items-center gap-[9px] border-b border-[var(--row-border)] py-[7px] pr-1 text-left transition-colors duration-100 hover:bg-[var(--tint)] bg-transparent" href="/en/explorer/municipalities/batumi">
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10.5px] text-[var(--faint)]">02</span>
<span class="min-w-0">
<span data-testid="municipal-row-name" class="block truncate text-[12.5px] font-medium">Batumi</span>
<span class="block text-[11px] min-[768px]:truncate min-[768px]:text-[10.5px] text-[var(--faint)]">Adjara</span>
<span class="mt-[5px] block h-[3px] bg-[var(--hairline-soft)]">
<span data-testid="municipal-row-bar" class="block h-[3px] bg-[var(--accent)]" style="width:18.0%">
</span>
</span>
</span>
<span class="min-w-0 text-right font-[family-name:var(--font-numeric)]">
<span data-testid="municipal-row-primary-amount" class="block text-[11.5px]">0.25 mln GEL</span>
<span data-testid="municipal-row-per-resident" class="mt-0.5 block text-[11px] min-[768px]:text-[10px] leading-[1.25] text-[var(--muted)]">1,368 per resident</span>
</span>
<span aria-hidden="true" class="font-[family-name:var(--font-numeric)] text-[11px] text-[var(--faint)]">→</span>
</a>
</div>
<div data-testid="municipal-list-region" hidden="" class="mt-1.5 @min-[768px]:max-h-[620px] @min-[768px]:overflow-y-auto">
<a class="grid w-full grid-cols-[22px_minmax(0,1fr)_122px_12px] items-center gap-[9px] border-b border-[var(--row-border)] py-[7px] pr-1 text-left transition-colors duration-100 hover:bg-[var(--tint)] bg-transparent" href="/en/explorer/municipalities/georgia">
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10.5px] text-[var(--faint)]">—</span>
<span class="min-w-0">
<span data-testid="municipal-row-name" class="block truncate text-[12.5px] font-medium">Georgia</span>
<span class="block text-[11px] min-[768px]:truncate min-[768px]:text-[10.5px] text-[var(--faint)]">69 municipal budgets</span>
<span class="mt-[5px] block h-[3px] bg-[var(--hairline-soft)]">
<span data-testid="municipal-row-bar" class="block h-[3px] bg-[var(--accent)]" style="width:100.0%">
</span>
</span>
</span>
<span class="min-w-0 text-right font-[family-name:var(--font-numeric)]">
<span data-testid="municipal-row-primary-amount" class="block text-[11.5px]">3.94 mln GEL</span>
</span>
<span aria-hidden="true" class="font-[family-name:var(--font-numeric)] text-[11px] text-[var(--faint)]">→</span>
</a>
<a class="grid w-full grid-cols-[22px_minmax(0,1fr)_122px_12px] items-center gap-[9px] border-b border-[var(--row-border)] py-[7px] pr-1 text-left transition-colors duration-100 hover:bg-[var(--tint)] bg-transparent" href="/en/explorer/municipalities/region/adjara">
<span class="font-[family-name:var(--font-numeric)] text-[11px] min-[768px]:text-[10.5px] text-[var(--faint)]">01</span>
<span class="min-w-0">
<span data-testid="municipal-row-name" class="block truncate text-[12.5px] font-medium">Adjara</span>
<span class="block text-[11px] min-[768px]:truncate min-[768px]:text-[10.5px] text-[var(--faint)]">1 municipality</span>
<span class="mt-[5px] block h-[3px] bg-[var(--hairline-soft)]">
<span data-testid="municipal-row-bar" class="block h-[3px] bg-[var(--accent)]" style="width:10.5%">
</span>
</span>
</span>
<span class="min-w-0 text-right font-[family-name:var(--font-numeric)]">
<span data-testid="municipal-row-primary-amount" class="block text-[11.5px]">0.41 mln GEL</span>
<span data-testid="municipal-row-per-resident" class="mt-0.5 block text-[11px] min-[768px]:text-[10px] leading-[1.25] text-[var(--muted)]">1,148 per resident</span>
</span>
<span aria-hidden="true" class="font-[family-name:var(--font-numeric)] text-[11px] text-[var(--faint)]">→</span>
</a>
</div>
</div>
</div>
<div class="mt-9 border-t border-[var(--hairline)] pt-4">
<p data-testid="municipal-source-note" class="text-xs leading-relaxed text-[var(--muted)]">Source Boundaries: <a href="https://www.openstreetmap.org/copyright" target="_blank" rel="noreferrer" class="underline underline-offset-2 hover:text-[var(--accent)]">© OpenStreetMap contributors</a> (ODbL).</p>
</div>"
`;

exports[`the place-page shell pieces > EntityHeading's markup is the Budget heading's, without and with previous/next (snapshots) > with previous/next 1`] = `
"<div class="mt-[22px] flex flex-col gap-4 min-[768px]:flex-row min-[768px]:items-baseline min-[768px]:justify-between min-[768px]:gap-5">
<div class="min-w-0 min-[768px]:flex-1">
<h1 class="mb-2 font-[family-name:var(--font-display)] text-[30px] font-semibold leading-[1.15] tracking-[-0.01em] min-[768px]:text-[36px]">Population — <button type="button" data-testid="entity-picker-trigger" aria-expanded="false" aria-haspopup="dialog" class="group inline-block max-w-full align-bottom break-words cursor-pointer border-b border-dashed border-[color:color-mix(in_srgb,var(--accent)_60%,transparent)] font-[family-name:var(--font-display)] text-[var(--accent)] transition-colors duration-100 hover:border-[var(--accent)]">Batumi<span aria-hidden="true" class="ml-1 inline-block h-0 w-0 border-x-[4px] border-x-transparent border-t-[5px] border-t-current">
</span>
</button>
</h1>
<div class="text-[12.5px] text-[var(--muted)]">Adjara · Rank 2 of 64</div>
</div>
<span data-testid="municipal-entity-navigation" class="grid w-full min-w-0 grid-cols-2 items-center gap-4 min-[768px]:flex min-[768px]:w-auto min-[768px]:max-w-[40%] min-[768px]:shrink">
<a href="/a" class="flex min-h-11 min-w-0 items-center font-[family-name:var(--font-numeric)] text-[11.5px] text-[var(--muted)] no-underline hover:text-[var(--ink)] min-[768px]:min-h-0">
<span class="min-w-0 truncate">← Kobuleti</span>
</a>
<a href="/b" class="flex min-h-11 min-w-0 items-center justify-end text-right font-[family-name:var(--font-numeric)] text-[11.5px] text-[var(--muted)] no-underline hover:text-[var(--ink)] min-[768px]:min-h-0">
<span class="min-w-0 truncate">Keda →</span>
</a>
</span>
</div>"
`;

exports[`the place-page shell pieces > EntityHeading's markup is the Budget heading's, without and with previous/next (snapshots) > without previous/next 1`] = `
"<div class="mt-[22px] flex flex-col gap-4 min-[768px]:flex-row min-[768px]:items-baseline min-[768px]:justify-between min-[768px]:gap-5">
<div class="min-w-0 min-[768px]:flex-1">
<h1 class="mb-2 font-[family-name:var(--font-display)] text-[30px] font-semibold leading-[1.15] tracking-[-0.01em] min-[768px]:text-[36px]">Population — <button type="button" data-testid="entity-picker-trigger" aria-expanded="false" aria-haspopup="dialog" class="group inline-block max-w-full align-bottom break-words cursor-pointer border-b border-dashed border-[color:color-mix(in_srgb,var(--accent)_60%,transparent)] font-[family-name:var(--font-display)] text-[var(--accent)] transition-colors duration-100 hover:border-[var(--accent)]">Batumi<span aria-hidden="true" class="ml-1 inline-block h-0 w-0 border-x-[4px] border-x-transparent border-t-[5px] border-t-current">
</span>
</button>
</h1>
<div class="text-[12.5px] text-[var(--muted)]">Adjara · Rank 2 of 64</div>
</div>
</div>"
`;

exports[`the place-page shell pieces > EntityMemberList's markup is the Budget region page's list (snapshot) 1`] = `
"<div class="mt-11 border-t-2 border-[var(--ink)] pt-[22px]">
<h2 class="mb-3.5 font-[family-name:var(--font-display)] text-[22px] font-semibold">Municipalities in this region</h2>
<a href="/en/x/batumi" data-testid="region-member-row" class="grid grid-cols-[24px_minmax(0,1fr)_auto] items-center gap-2.5 border-b border-[var(--hairline-soft)] py-2 text-[var(--ink)] no-underline hover:bg-[var(--tint)]">
<span class="font-[family-name:var(--font-numeric)] text-[11px] text-[var(--faint)]">01</span>
<span class="truncate text-[12.5px]">Batumi</span>
<span class="font-[family-name:var(--font-numeric)] text-[11.5px]">246,267</span>
</a>
</div>"
`;

exports[`the place-page shell pieces > EntityWorkspaceShell's markup is the Budget place page's two columns (snapshot) 1`] = `
"<div data-testid="x-workspace" class="mt-7 grid items-start gap-10 border-t border-[var(--ink)] pt-5 @min-[1100px]:grid-cols-[minmax(0,1fr)_340px]">
<div data-chart-panel="true" class="min-w-0">
<p>main</p>
</div>
<aside class="min-w-0 border-t-2 border-[var(--ink)] pt-[22px] @min-[1100px]:border-t-0 @min-[1100px]:border-l @min-[1100px]:border-[var(--hairline)] @min-[1100px]:pt-0 @min-[1100px]:pl-[26px]">
<div class="sticky top-5">
<p>aside</p>
</div>
</aside>
</div>"
`;
